<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.personal.lc.activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_x"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="@dimen/item_margin"
        android:layout_marginRight="@dimen/item_margin"
        android:layout_marginTop="@dimen/item_margin"
        android:background="#3333FF"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dp"
        android:text="@string/main_title"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.personal.lc.widget.LatticeItemView
            android:id="@+id/select_company_btn"
            style="@style/main_item_left"
            android:background="@drawable/left_item1_selector"
            android:clickable="true"
            android:text="@string/company"
            custom:isSquare="true" />

        <com.personal.lc.widget.LatticeItemView
            android:id="@+id/input_order"
            style="@style/main_item_right"
            android:background="@drawable/right_item1_selector"
            android:clickable="true"
            android:text="@string/order_no"
            custom:isSquare="true" />
    </LinearLayout>

    <com.personal.lc.widget.LatticeItemView
        android:id="@+id/query_btn"
        style="@style/main_item"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/item_margin"
        android:layout_marginRight="@dimen/item_margin"
        android:background="@drawable/query_btn_selector"
        android:clickable="true"
        android:text="@string/query_now"
        custom:isSquare="false" />

</LinearLayout>