<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/msg_dialog_title"
        android:textColor="#FF000000"
        android:textSize="20sp" />

    <View
        android:id="@+id/tv_line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_title"
        android:background="#FFDDDDDD" />

    <ScrollView
        android:id="@+id/tv_content_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_line1"
        android:layout_centerHorizontal="true"
        android:minHeight="80dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:minHeight="120sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/msg_dialog_content"
                android:textColor="#FFAAAAAA"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_content_scroll"
        android:background="@drawable/dialog_btn_bg"
        android:orientation="horizontal"
        android:paddingTop="0.5dp" >

        <Button
            android:id="@+id/button_set_later"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/msg_click_left"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:text="@string/msg_dialog_left_button_text"
            android:textColor="#FF009EEA"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/button_set_now"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/msg_click_right"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:text="@string/msg_dialog_right_button_text"
            android:textColor="#FF009EEA"
            android:textSize="20sp" 
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

</RelativeLayout>